--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -12,6 +12,7 @@ Log In
 
 
 {% block content %}
+{% include 'partials/social_login.html' %}
 
 <form method="POST" action="{% url "users:login" %}">
     {% csrf_token %}
