Start making page beautiful with tailwind

--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -7,6 +7,13 @@ Home
 
 
 {% block content %}
+
+
+<div class="container bg-gray-800 rounded-xl mx-auto h-50vh mt-32 mb-24 bg-cover bg-bottom" style="background-image:url(https://images.unsplash.com/photo-1603174559310-7bdc5016726b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1045&q=80)">
+
+</div>
+
+
 {% for room in rooms %}
 
 <h1>
@@ -16,7 +23,6 @@ Home
 </h1>
 {% endfor %}
 
-{{now}}
 
 <h5>
 
