--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -12,7 +12,18 @@
         @apply py-10 px-5;
     }
     &:hover{
-        @apply hover:border-gray-600;
+        @apply border-gray-600;
+    }
+}
+
+.btn{
+    @apply w-full text-center rounded-sm py-5 font-light text-lg;
+}
+
+input{
+    @apply text-left border border-gray-600 px-5 w-full rounded-sm py-5 font-light text-lg;
+    &:focus{
+        @apply outline-none border-green-400;
     }
 }
 
