--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,3 @@
-<footer>
-    &copy; Nbnb
+<footer class="container mx-auto text-center py-20 border-t font-medium text-gray-400">
+    &copy; 2021 Nbnb, Inc. All rights reserved. Please don't copy us.
 </footer>
