--- a/templates/partials/social_login.html
+++ b/templates/partials/social_login.html
@@ -1,8 +1,14 @@
-<div>
-<a href="{% url 'users:github-login' %}">
-    Countinue with Github
+<div class="flex flex-col w-full">
+<a href="{% url 'users:github-login' %}" class="btn border-2 text-gray-700 border-gray-700 mb-2">
+    <i class="fab fa-github-alt mr-2 fa-lg"></i> Countinue with Github
 </a>
-<a href="{% url 'users:kakao-login' %}">
-    Countinue with Kakao
+<a href="{% url 'users:kakao-login' %}" class="btn border text-yellow-800 mb-2 bg-yellow-400 border-yellow-400">
+    <i class="fas fa-comment  mr-2 fa-lg"></i>Countinue with Kakao
 </a>
+</div>
+
+<div class="flex items-center w-full my-5">
+    <div class="h-px w-full bg-gray-500"></div>
+    <span class="text-gray-600 font-medium mx-4 text-sm">or</span>
+    <div class="h-px w-full bg-gray-500"></div>
 </div>
