--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -20,6 +20,10 @@
     @apply w-full text-center rounded-sm py-5 font-light text-lg;
 }
 
+.btn-link{
+    @apply w-full text-center rounded-lg py-3 font-light text-lg text-white bg-red-500;
+}
+
 input{
     @apply text-left border border-gray-600 px-5 w-full rounded-sm py-5 font-light text-lg;
     &:focus{
