--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -24,11 +24,22 @@
     @apply w-full text-center rounded-lg py-3 font-light text-lg text-white bg-red-500;
 }
 
-input{
+input,
+textarea,
+select{
     @apply text-left border border-gray-600 px-5 w-full rounded-sm py-5 font-light text-lg;
     &:focus{
         @apply outline-none border-green-400;
     }
+}
+
+textarea{
+    resize: none;
+    height: 100px;
+}
+
+select{
+    height: 50px;
 }
 
 form{
