--- a/templates/mixins/auth/auth_form.html
+++ b/templates/mixins/auth/auth_form.html
@@ -1,5 +1,5 @@
 
-    <form method="POST" class="w-full">
+    <form method="POST" class="w-full" enctype="multipart/form-data">
         {% csrf_token %}
 
         {% for field in form %}
