--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -95,6 +95,13 @@
             </div>
         </div>
     </div>
-    <div class="w-1/3"></div>
+    <div class="w-1/3">
+        
+        {% if room.host == user %}
+            
+        <a href="{% url 'rooms:edit' room.pk%}" class="btn-link block">Edit room</a>
+        {% endif %}
+            
+    </div>
 </div>
 {% endblock content %}
