--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load sexycapitals %}
 
 {% block page_title %}
 {{room.name}}
@@ -100,7 +100,7 @@
         {% if room.host == user %}
         <a href="{% url 'rooms:edit' room.pk%}" class="btn-link block">Edit room</a>
         {% else %}
-            
+            {{'somthing'|sexycapitals}}
             {% if not request.session.is_hosting %}
                 
                 {% for calendar in room.get_calendars %}
@@ -115,8 +115,14 @@
                             
                             {% for day in calendar.get_days%}
                                 
-                                {% if day != 0 %}
+                                {% if day.number != 0 %}
+                                    
+                                    {% if day.past %}
+                                        <span class="rounded bg-gray=200 w-full text-center p-1 text-gray-300">{{day}}</span>
+                                    {% else %}
                                     <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-green-400 hover:text-white cursor-pointer">{{day}}</span>
+                                    {% endif %}
+                                        
                                 {% else %}
                                     <span></span>
                                 {% endif %}
