--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load sexycapitals %}
+{% load is_booked %}
 
 {% block page_title %}
 {{room.name}}
@@ -100,7 +100,6 @@
         {% if room.host == user %}
         <a href="{% url 'rooms:edit' room.pk%}" class="btn-link block">Edit room</a>
         {% else %}
-            {{'somthing'|sexycapitals}}
             {% if not request.session.is_hosting %}
                 
                 {% for calendar in room.get_calendars %}
@@ -114,13 +113,15 @@
                         <div class="cal-grid">
                             
                             {% for day in calendar.get_days%}
-                                
+                                {% is_booked room day as is_booked_bool %}
                                 {% if day.number != 0 %}
                                     
                                     {% if day.past %}
                                         <span class="rounded bg-gray=200 w-full text-center p-1 text-gray-300">{{day}}</span>
+                                    {% elif is_booked_bool%}
+                                    <span class="rounded bg-gray=200 w-full text-center p-1 text-gray-300 line-through">{{day}}</span>
                                     {% else %}
-                                    <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-green-400 hover:text-white cursor-pointer">{{day}}</span>
+                                    <a href="{% url 'reservations:create' room.pk day.year day.month day.number %}" class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:bg-green-400 hover:text-white cursor-pointer">{{day}}</a>
                                     {% endif %}
                                         
                                 {% else %}
